--- a/src/main/properties/application-development.properties
+++ b/src/main/properties/application-development.properties
@@ -20,10 +20,10 @@ spring.datasource.password						= ACME-Us3r-P@ssw0rd
 spring.jpa.hibernate.show-sql					= true
 spring.jpa.hibernate.format-sql					= true
 
-logging.level.root								= WARN
-logging.level.acme								= WARN
-logging.level.org.apache.tiles					= WARN
+logging.level.root								= ERROR
+logging.level.acme								= DEBUG
+logging.level.org.apache.tiles					= DEBUG
 logging.level.org.springframework.boot.devtools	= WARN
 logging.level.org.hibernate.SQL					= WARN
-logging.level.org.hibernate.type.descriptor.sql	= WARN
-logging.level.org.hibernate.type				= WARN
+logging.level.org.hibernate.type.descriptor.sql	= ERROR
+logging.level.org.hibernate.type				= ERROR
