some fixes and more tests

--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,12 @@
 			<version>2.4.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.awaitility</groupId>
+			<artifactId>awaitility</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 </project>
